--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -14,7 +14,7 @@
 }
 .spane > p{
     color: white;
-    font-size: 0.5rem;
+    font-size: 1rem;
 }
 .inbox-section{
     display: flex;
@@ -60,6 +60,7 @@
     background-color: #333;
     color: white;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .upload-section input::placeholder {
@@ -74,6 +75,7 @@
     background-color: #333;
     color: white;
     font-size: 1rem;
+    cursor: pointer;
 }
 .submit:hover{
     background-color: black;
@@ -84,7 +86,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: #444;
     padding: 1.2rem;
     border-radius: 5px;
@@ -92,4 +94,5 @@
     color: white;
     font-size: 1rem;
     margin-bottom: 0.5rem;
+    cursor: pointer;
 }
